<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">Warehouse is empty</string>
    <string name="empty_view_subtitle_text">Please refill stock</string>
    <string name="item_name">Item Name: </string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_price">Item Price: </string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity: </string>
    <string name="hint_pet_quantity">Quantity</string>
    <string name="unit_item_currency">£</string>
    <string name="action_delete_all_entries">Clear Warehouse</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="type_unknown">Unknown</string>
    <string name="type_monitor">Monitor</string>
    <string name="type_pc">PC</string>
    <string name="type_headphone">Headphone</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit Pet</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_failed">Error with deleting pet</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_insert_item_failed">Insert Item Failed</string>
    <string name="editor_insert_item_successful">Insert Item Successful</string>
    <string name="editor_update_item_failed">Update Item Failed</string>
    <string name="editor_update_item_successful">Update Item Successful</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="category_type">Type</string>
    <string name="required_input">Please fill all fields</string>

</resources>
